# rl-m2-proj

./: .gitignore  justfile  pyproject.toml
scripts/: random_taxi.py  taxi_test_sarsa.py  taxi_train_sarsa.py  test_minesweeper.py  train_dots_boxes.py  train_ludo_dqn.py  train_minesweeper.py
src/reinfproj/: __init__.py
src/reinfproj/agents/: qagent.py  random_agent.py  sarsa.py
src/reinfproj/envs/: minesweeper.py
src/reinfproj/games/dotsandboxes/: dqn_agent.py  env.py
src/reinfproj/games/ludo/: agent.py  constants.py  dqn_agent.py  ludo_macro_action.py  ludo_obs.py  macro_dqn_agent.py  strats.py  wrapper.py
src/reinfproj/games/minesweeper/: __init__.py  config.py  events.py  game.py  sprites.py  state.py  types.py  view.py
src/reinfproj/utils/: agent.py  base_env.py  discrete_gym_env.py  state_action.py  types.py
